--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-localstorage-mock": "^2.4.26"
   }
 }
